@@ -66,6 +66,9 @@ Changes in stable release 2.4.9 (not released yet)
 
 * fvwm-menu-headlines: added support for CNN and BBC headlines.
 
+* Fixed a performance problem with large numbers of mouse binding
+  commands.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.8 (11-Jun-2002)
