@@ -1,5 +1,9 @@
 2002-08-11  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/bindings.c (update_nr_buttons):
+	(ParseBinding):
+	fixed sluggish binding commands
+
 	* fvwm/style.c (CMD_Style):
 	bug fix in style parsing
 
